[package]
name = "nostr-lmdb"
version = "0.37.0"
edition = "2021"
description = "LMDB storage backend for nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database", "lmdb"]

[dependencies]
async-utility.workspace = true
heed = { version = "0.20", default-features = false, features = ["read-txn-no-tls"] }
nostr = { workspace = true, features = ["std"] }
nostr-database = { workspace = true, features = ["flatbuf"] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
