[package]
name = "nostr-lmdb"
version = "0.41.0"
edition = "2021"
description = "LMDB storage backend for nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.72.0"
keywords = ["nostr", "database", "lmdb"]

[dependencies]
async-utility.workspace = true
nostr = { workspace = true, features = ["std"] }
nostr-database = { workspace = true, features = ["flatbuf"] }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[target.'cfg(not(all(target_os = "macos", target_os = "ios")))'.dependencies]
heed = { version = "0.22", default-features = false }

# POSIX semaphores are required for Apple's App Sandbox on iOS & macOS
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
heed = { version = "0.22", default-features = false, features = ["posix-sem"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
