[package]
name = "nostr-mls-database"
version = "0.40.0"
edition = "2021"
description = "Database for nostr-mls that wraps OpenMLS storage backends"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "mls", "openmls"]

[dependencies]
openmls = { git = "https://github.com/openmls/openmls", rev = "054e263906730376932e9752ec85ed0aa0ca4a77", default-features = false }
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "054e263906730376932e9752ec85ed0aa0ca4a77", default-features = false }
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
openmls_memory_storage = { git = "https://github.com/openmls/openmls", rev = "054e263906730376932e9752ec85ed0aa0ca4a77" }
