[package]
name = "nostr-mls-storage"
version = "0.41.0"
edition = "2021"
description = "Storage abstraction for nostr-mls that wraps OpenMLS storage backends"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "mls", "openmls"]

[dependencies]
nostr = { workspace = true, features = ["std", "parser"] }
openmls_traits = { git = "https://github.com/erskingardner/openmls", rev = "df17af38cbf881de46ab3d783215183c9feb6ffb", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
