[package]
name = "nostr-mls"
version = "0.40.0"
edition = "2021"
description = "A simplified interface to build secure messaging apps on nostr with MLS."
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "mls", "openmls"]

[dependencies]
nostr = { workspace = true, features = ["std", "nip44"] }
nostr-mls-storage = { workspace = true }
openmls = { git = "https://github.com/erskingardner/openmls", rev = "df17af38cbf881de46ab3d783215183c9feb6ffb", default-features = false }
openmls_basic_credential = { git = "https://github.com/erskingardner/openmls", rev = "df17af38cbf881de46ab3d783215183c9feb6ffb", default-features = false }
openmls_rust_crypto = { git = "https://github.com/erskingardner/openmls", rev = "df17af38cbf881de46ab3d783215183c9feb6ffb", default-features = false }
openmls_traits = { git = "https://github.com/erskingardner/openmls", rev = "df17af38cbf881de46ab3d783215183c9feb6ffb", default-features = false }
tls_codec = "0.4"
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
openmls_memory_storage = { git = "https://github.com/erskingardner/openmls", rev = "df17af38cbf881de46ab3d783215183c9feb6ffb" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[[example]]
name = "mls"
