[package]
name = "nostr-mls"
version = "0.41.0"
edition = "2021"
description = "A simplified interface to build secure messaging apps on nostr with MLS."
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.74.0"
keywords = ["nostr", "mls", "openmls"]

[dependencies]
nostr = { workspace = true, features = ["std", "nip44"] }
nostr-mls-storage.workspace = true
openmls = { git = "https://github.com/openmls/openmls", rev = "4cc0f594b11262083ad9827b3b2033052c6ef99f", default-features = false }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", rev = "4cc0f594b11262083ad9827b3b2033052c6ef99f", default-features = false }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "4cc0f594b11262083ad9827b3b2033052c6ef99f", default-features = false }
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "4cc0f594b11262083ad9827b3b2033052c6ef99f", default-features = false }
tls_codec = "0.4"
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
nostr-mls-memory-storage.workspace = true
nostr-mls-sqlite-storage.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "mls_memory"
path = "examples/mls_memory.rs"

[[example]]
name = "mls_sqlite"
path = "examples/mls_sqlite.rs"
