[package]
name = "nostr-ndb"
version = "0.41.0"
edition = "2021"
description = "ndb (nostrdb) storage backend for Nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database", "ndb", "nostrdb"]

[dependencies]
nostr = { workspace = true, features = ["std"] }
nostr-database.workspace = true
nostrdb = "0.6"
