[package]
name = "nostr-redb"
version = "0.38.0"
edition = "2021"
description = "redb storage backend for nostr apps"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "database", "redb"]

[dependencies]
async-utility.workspace = true
redb = { version = "2.2", default-features = false } # v2.3 has MSRV at 1.81
nostr = { workspace = true, features = ["std"] }
nostr-database = { workspace = true, features = ["flatbuf"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3"
indexed_db_futures = "0.5"
tracing.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
