[package]
name = "nostr-relay-builder"
version = "0.43.0"
edition.workspace = true
description = "Build your own custom nostr relay!"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "relay", "builder"]

[features]
default = []
tor = ["async-wsocket/tor-launch-service"]

[dependencies]
async-utility.workspace = true
async-wsocket.workspace = true
atomic-destructor.workspace = true
hex = { workspace = true, features = ["std"] }
negentropy = { workspace = true, features = ["std"] }
nostr = { workspace = true, default-features = false, features = ["std"] }
nostr-database.workspace = true
tokio = { workspace = true, features = ["macros", "net", "sync"] }
tracing.workspace = true

[dev-dependencies]
base64 = { workspace = true, features = ["std"] }
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "hyper"

[[example]]
name = "local-with-hs"
required-features = ["tor"]

[[example]]
name = "mock"
