[package]
name = "nostr-relay-builder"
version = "0.45.0-alpha.2"
edition.workspace = true
description = "Build your own custom nostr relay!"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "relay", "builder"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["ring", "rustls-tls-webpki-roots"]
aws_lc_rs = ["async-wsocket/aws_lc_rs", "nostr-sdk/aws_lc_rs"]
native-tls = ["async-wsocket/native-tls", "nostr-sdk/native-tls"]
native-tls-vendored = ["async-wsocket/native-tls-vendored", "nostr-sdk/native-tls-vendored"]
ring = ["async-wsocket/ring", "nostr-sdk/ring"]
rustls-tls-native-roots = ["async-wsocket/rustls-tls-native-roots", "nostr-sdk/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["async-wsocket/rustls-tls-webpki-roots", "nostr-sdk/rustls-tls-webpki-roots"]

[dependencies]
async-utility.workspace = true
async-wsocket.workspace = true
atomic-destructor.workspace = true
faster-hex = { workspace = true, features = ["std"] }
negentropy = { workspace = true, features = ["std"] }
nostr = { workspace = true, default-features = false, features = ["std", "rand"] }
nostr-database.workspace = true
nostr-memory.workspace = true
nostr-sdk.workspace = true
opaquerr = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["macros", "net", "sync"] }
tracing.workspace = true

[dev-dependencies]
base64 = { workspace = true, features = ["std"] }
hyper = { version = "1.9", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
nostr-lmdb.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "hyper"

[[example]]
name = "mock"

[[example]]
name = "policy"

[[example]]
name = "simple_relay"
